kubernetes/deploy/mosquitto/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  labels:
    app.kubernetes.io/instance: mosquitto
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: mosquitto
    app.kubernetes.io/version: 2.0.14
    helm.sh/chart: mosquitto-4.8.2
  annotations:
spec:
  type: ClusterIP
  ports:
  - port: 1883
    targetPort: mqtt
    protocol: TCP
    name: mqtt
  selector:
    app.kubernetes.io/name: mosquitto
    app.kubernetes.io/instance: mosquitto
