kubernetes/deploy/mosquitto/ingressroutetcp.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mqtt-ingress
spec:
  entryPoints:                  # [1]
    - mqtt
  routes:                       # [2]
  - match: HostSNI(`*`)         # [3]
    priority: 10                # [4]
    services:                   # [7]
    - name: mosquitto                 # [8]
      port: 1883                # [9]
      weight: 10                # [10]
      terminationDelay: 400     # [11]
